[package]
name = "Jan"
version = "0.6.599"
description = "Use offline LLMs with your own data. Run open source models like Llama2 or Falcon on your internal computers/servers."
authors = ["Jan <service@jan.ai>"]
license = "MIT"
repository = "https://github.com/menloresearch/jan"
edition = "2021"
rust-version = "1.77.2"
resolver = "2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = [
    "tauri/wry",
    "tauri/common-controls-v6",
    "tauri/x11",
    "tauri/protocol-asset",
    "tauri/macos-private-api",
    "tauri/test",
]
test-tauri = [
    "tauri/wry",
    "tauri/x11",
    "tauri/protocol-asset",
    "tauri/macos-private-api",
    "tauri/test",
]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
dirs = "6.0.0"
env = "1.0.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
flate2 = "1.0"
futures-util = "0.3.31"
hyper = { version = "0.14", features = ["server"] }
jan-utils = { path = "./utils" }
libloading = "0.8.7"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "3196c95f1dfafbffbdcdd6d365c94969ac975e6a", features = [
    "client",
    "transport-sse-client",
    "transport-child-process",
    "tower",
    "reqwest",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tar = "0.4"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-hardware = { path = "./plugins/tauri-plugin-hardware" }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-llamacpp = { path = "./plugins/tauri-plugin-llamacpp" }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2.2.7"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = "2"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }

[dependencies.tauri]
version = "2.5.0"
default-features = false
features = ["protocol-asset", "macos-private-api", "test"]

[target.'cfg(windows)'.dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(unix)'.dependencies]
nix = "=0.30.1"

[target.'cfg(windows)'.dependencies]
libc = "0.2.172"
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
once_cell = "1.18"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
