[package]
name = "jan-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["process"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

[features]
default = []
logging = ["log"]