[package]
name = "jan-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
hmac = "0.12"
log = { version = "0.4", optional = true }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["process"] }
tokio-util = "0.7.14"
url = "2.5"

[features]
default = []
logging = ["log"]
