[package]
name = "jan-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
hmac = "0.12"
log = { version = "0.4", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["process", "fs", "macros", "rt"] }
tokio-util = "0.7.14"
url = "2.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
logging = ["log"]
