[package]
name = "tauri-plugin-agent"
version = "0.0.0"
authors = ["Jan <service@jan.ai>"]
description = "ReAct agent loop, WASM skill dispatcher, skill manifest, and content sanitizer"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-agent"

[lib]
name = "tauri_plugin_agent"

[dependencies]
async-trait          = "0.1"
log                  = "0.4"
regex                = "1"
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
tauri                = { version = "2.5.0", default-features = false }
thiserror            = "2.0"
tokio                = { version = "1", features = ["full"] }
tauri-plugin-sandbox = { path = "../tauri-plugin-sandbox" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
