[package]
name = "tauri-plugin-foundation-models"
version = "0.6.599"
authors = ["Jan <service@jan.ai>"]
description = "Tauri plugin for managing Apple Foundation Models server processes on macOS 26+"
license = "MIT"
repository = "https://github.com/janhq/jan"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-foundation-models"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.34.2"
tauri = { version = "2.5.0", default-features = false, features = [] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
jan-utils = { path = "../../utils" }

# Unix-specific dependencies (macOS)
[target.'cfg(unix)'.dependencies]
nix = { version = "=0.30.1", features = ["signal", "process"] }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
