[package]
name = "tauri-plugin-sandbox"
version = "0.6.599"
authors = ["Jan <service@jan.ai>"]
description = "Ephemeral WASM/WASI sandbox for skill execution (Wasmtime)"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-sandbox"

[dependencies]
tauri = { version = "2.5.0", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
