[package]
name = "tauri-plugin-utils"
version = "0.6.599"
authors = ["Jan <service@jan.ai>"]
description = "Tauri plugin for Jan utils"
license = "MIT"
repository = "https://github.com/menloresearch/jan"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-utils"


[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
