[package]
name = "tauri-plugin-vector-db"
version = "0.1.0"
authors = ["Jan <service@jan.ai>"]
description = "Tauri plugin for vector storage and similarity search"
license = "MIT"
repository = "https://github.com/janhq/jan"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-vector-db"

[dependencies]
tauri = { version = "2.8.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
dirs = "6.0.0"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
