[package]
name = "jan-wasm-worker"
version = "0.1.0"
edition = "2021"
description = "Sandboxed JS executor — child process for jan-cli"

[[bin]]
name = "jan-wasm-worker"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
wasmtime      = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }

[profile.release]
opt-level  = "z"
lto        = "fat"
strip      = "symbols"
panic      = "abort"
codegen-units = 1
