[package]
name        = "web-search-tool"
version     = "0.1.0"
edition     = "2021"
description = "DuckDuckGo web-search skill for Jan (WASM tool)"
publish     = false

# cdylib produces a .wasm shared library with explicit exports.
# wasm32-wasip1 gives us std + allocator without needing wasm-bindgen.
[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
